--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -98,6 +98,7 @@ obj-$(CONFIG_SENSOR_BMA150)		+= sensor_bma150.o
 obj-$(CONFIG_SENSOR_BMA220)		+= sensor_bma220.o
 obj-$(CONFIG_SENSOR_BMA023)		+= sensor_bma023.o
 obj-$(CONFIG_SENSOR_BMA250)		+= sensor_bma250.o
+obj-$(CONFIG_SENSOR_MMA7660)            += sensor_mma7660.o
 
 obj-$(CONFIG_WIFI_PWR_CTL)		+= wifi_pwr/
 obj-$(CONFIG_WPS_PBC)		+= wps_pbc/
