--- a/drivers/media/video/tcccam/Makefile
+++ b/drivers/media/video/tcccam/Makefile
@@ -10,6 +10,7 @@ obj-$(CONFIG_VIDEO_CAMERA_SENSOR_MT9P111) += mt9p111_5mp.o
 obj-$(CONFIG_VIDEO_CAMERA_SENSOR_AIT848_ISP) += venus_ait848_5mp.o venusv3_api.o venus_api.o venus_i2c_ctl.o
 obj-$(CONFIG_VIDEO_CAMERA_SENSOR_ISX006) += isx006_5mp.o
 obj-$(CONFIG_VIDEO_CAMERA_SENSOR_OV7690) += ov7690_vga.o
+obj-$(CONFIG_VIDEO_CAMERA_SENSOR_HI704) += hi704_vga.o
 obj-$(CONFIG_VIDEO_CAMERA_SENSOR_SIV100B) += siv100b_vga.o
 obj-$(CONFIG_VIDEO_CAMERA_SENSOR_GT2005) += gt2005_2mp.o gt2005_drv.o
 obj-$(CONFIG_VIDEO_CAMERA_NEXTCHIP_TEST) += nextchip_test.o
