--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -768,6 +768,12 @@ config SENSORS_MAX6650
 	  This driver can also be built as a module.  If so, the module
 	  will be called max6650.
 
+config SENSORS_MMA7660
+	tristate " 3-Axis Orientation/Motion detection sensor"
+	depends on I2C
+	help
+	    3-Axis Orientation/Motion detection sensor.
+
 config SENSORS_PC87360
 	tristate "National Semiconductor PC87360 family"
 	select HWMON_VID
