video/tcc: add support for TM080SDH03 800x600 LCD
This LCD display is used in the MID8128 and possibly in some
MID8127.

--- a/arch/arm/configs/tcc88xx_ua_defconfig
+++ b/arch/arm/configs/tcc88xx_ua_defconfig
@@ -1820,6 +1820,7 @@ CONFIG_LCD_ED090NA=y
 # CONFIG_LCD_HV070WSA is not set
 CONFIG_LCD_HSD1126XA01A=y
 CONFIG_LCD_SETKR101=y
+CONFIG_LCD_TM080SDH03=y
 # CONFIG_LCD_LCDC0_USE is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 
