TCC92XX/TCC93XX merge fixes

--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -181,6 +181,8 @@ machine-$(CONFIG_ARCH_EXYNOS)		+= exynos
 machine-$(CONFIG_ARCH_SA1100)		+= sa1100
 machine-$(CONFIG_ARCH_SHARK)		+= shark
 machine-$(CONFIG_ARCH_SHMOBILE) 	+= shmobile
+machine-$(CONFIG_ARCH_TCC92XX)		:= tcc92xx
+machine-$(CONFIG_ARCH_TCC93XX)		:= tcc93xx
 machine-$(CONFIG_ARCH_TCC892X)		:= tcc892x
 machine-$(CONFIG_ARCH_TCC88XX)		:= tcc88xx
 machine-$(CONFIG_ARCH_TEGRA)		+= tegra
