arm: add Telechips SoCs support
Currently, this supports both the TCC92XX family of ARM11 processors,
and the TCC88XX family of Cortex-A8 processors. Some preperation is
even included to support the later TCC892X & TCC893X Cortex-A5
processors.

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1011,6 +1011,8 @@ source "arch/arm/mach-prima2/Kconfig"
 
 source "arch/arm/mach-tegra/Kconfig"
 
+source "arch/arm/mach-tcc/Kconfig"
+
 source "arch/arm/mach-u300/Kconfig"
 
 source "arch/arm/mach-ux500/Kconfig"
