--- a/arch/arm/boot/dts/tcc92xx.dtsi
+++ b/arch/arm/boot/dts/tcc92xx.dtsi
@@ -42,6 +42,15 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			#gpio-cells = <3>;
+
+			i2cm0: i2cm0@0 {
+				tcc,pins = "PA0", "PA1";
+				tcc,function = "i2c0";
+			};
+			i2cm1: i2cm1@0 {
+				tcc,pins = "PA8", "PA9";
+				tcc,function = "i2c1";
+			};
 		};
 
                 clks: ckc@f0400000 {
@@ -63,6 +72,25 @@
 			interrupts = <0 0x4>, <1 0x4>;
 			clocks = <&clks 18>, <&clks 19>, <&clks 20>;
 		};
+
+		smui2cmaster0: smui2c-master0@f0405000 {
+			compatible = "tcc,i2c-master";
+			reg = <0xf0405000 0x40>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			interrupts = <2 0x4>;
+			clocks = <&clks 32>;
+			status = "disabled";
+		};
+		smui2cmaster1: smui2c-master1@f0405040 {
+			compatible = "tcc,i2c-master";
+			reg = <0xf0405040 0x40>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			interrupts = <2 0x4>;
+			clocks = <&clks 32>;
+			status = "disabled";
+		};
 	};
 
 	iobus {
@@ -70,6 +98,29 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges;
+
+		i2cmaster0: i2c-master0@f0530000 {
+			compatible = "tcc,i2c-master";
+			reg = <0xf0530000 0x40>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			interrupts = <38 0x4>;
+			clocks = <&clks 32>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&i2cm0>;
+			status = "disabled";
+		};
+		i2cmaster1: i2c-master1@f0530040 {
+			compatible = "tcc,i2c-master";
+			reg = <0xf0530040 0x40>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			interrupts = <38 0x4>;
+			clocks = <&clks 32>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&i2cm1>;
+			status = "disabled";
+		};
 
 		uart0: serial@f0532000 {
 			compatible = "tcc,uart", "ns16550a";
