--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2366,6 +2366,13 @@ config FB_MX3
 	  far only synchronous displays are supported. If you plan to use
 	  an LCD display with your i.MX31 system, say Y here.
 
+config FB_TCC_DDI
+	tristate "Telechips TCC88XX/TCC92XX framebuffer support"
+	depends on FB && (SOC_TCC88XX || SOC_TCC92XX)
+	select FB_CFB_FILLRECT
+	select FB_CFB_COPYAREA
+	select FB_CFB_IMAGEBLIT
+
 config FB_BROADSHEET
 	tristate "E-Ink Broadsheet/Epson S1D13521 controller support"
 	depends on FB
