mmc: Add SDHCI slot driver for Telechips SoCs.
Though there are some differences in the controller setup, the
individual SDHCI slots are all following SDHCI specs relatively
closely.

This driver has been tested on TCC92XX and TCC88XX platforms.

--- a/drivers/mmc/host/Kconfig
+++ b/drivers/mmc/host/Kconfig
@@ -167,6 +167,16 @@ config MMC_SDHCI_DOVE
 
 	  If unsure, say N.
 
+config MMC_SDHCI_TCC
+	tristate "SDHCI platform support for the Telechips SD/MMC Controller"
+	depends on ARCH_TCC
+	depends on MMC_SDHCI_PLTFM
+	help
+	  This selects the Telechips SD/MMC controller. If you have a Telechips
+	  platform with SD or MMC devices, say Y or M here.
+
+	  If unsure, say N.
+
 config MMC_SDHCI_TEGRA
 	tristate "SDHCI platform support for the Tegra SD/MMC Controller"
 	depends on ARCH_TEGRA
