--- a/arch/arm/boot/dts/tcc92xx-hsgx6d.dts
+++ b/arch/arm/boot/dts/tcc92xx-hsgx6d.dts
@@ -88,6 +88,26 @@
 			clock-frequency = <48000000>;
                         status = "okay";
                 };
+
+		sdhci@f05a0000 {
+			pinctrl-names = "default";
+			pinctrl-0 = <&sdhcip1>, <&sdhci1clk>;
+			tcc,power-gpios = <&u3 7>;
+			cd-gpios = <&pio 2 31 0>;
+			cd-inverted;
+			bus-width = <4>;
+			tcc,port = <1>;
+			status = "okay";
+		};
+		sdhci@f05a0200 {
+			pinctrl-names = "default";
+			pinctrl-0 = <&sdhcip3>, <&sdhci3clk>;
+			tcc,power-gpios = <&pio 5 10 0>;
+                        non-removable;
+                        bus-width = <4>;
+			tcc,port = <3>;
+			status = "okay";
+		};
 	};
 
 	gpio-keys {
