--- a/drivers/usb/host/Kconfig
+++ b/drivers/usb/host/Kconfig
@@ -452,6 +452,12 @@ config USB_OHCI_SH
 	  Enables support for the on-chip OHCI controller on the SuperH.
 	  If you use the PCI OHCI controller, this option is not necessary.
 
+config USB_OHCI_TCC
+	boolean "OHCI support for Telechips SoCs"
+	depends on ARCH_TCC
+	help
+	  Enable support for the Telechips SoC's on-chip OHCI controller.
+
 config USB_OHCI_EXYNOS
 	boolean "OHCI support for Samsung EXYNOS SoC Series"
 	depends on ARCH_EXYNOS
