tcc: implement basic restart/shutdown hooks

--- a/arch/arm/mach-tcc/Makefile
+++ b/arch/arm/mach-tcc/Makefile
@@ -1,3 +1,4 @@
+obj-$(CONFIG_ARCH_TCC)		+= pm.o
 obj-$(CONFIG_SOC_TCC92XX)	+= tcc92xx.o
 obj-$(CONFIG_SOC_TCC88XX)	+= tcc88xx.o
 obj-$(CONFIG_DEBUG_TCC_UART)	+= lluart.o
