plat/tcc: move atheros_wifi_mac to plat-tcc

--- a/arch/arm/plat-tcc/Makefile
+++ b/arch/arm/plat-tcc/Makefile
@@ -13,4 +13,4 @@ endif
 
 obj-$(CONFIG_DPM) 	+= tcc_dpm.o
 
-obj-$(CONFIG_ARCH_TCC)	+= nand.o pmap.o
+obj-$(CONFIG_ARCH_TCC)	+= nand.o pmap.o atheros_wifi.o
